# client-agnostic-ca-on-keystroke-traffic

./: Baseline-Model.ipynb  README.md  Siamese-Network.ipynb  pyproject.toml  requirements.txt
data/: README.md
lib/: customflowgenerator.py  datacleaner.py  flowdataset.py  flowloader.py  flowpreprocessing.py  mitmdataset.py  mitmpairdataset.py  mitmproxyloader.py  plotutility.py
lib/flowframework/: __init__.py  packetdataset.py  packetdatasettriplet.py  packetexperiment.py
lib/models/: MHCCL.py  Resnet18Conv1D.py
lib/models/convtran/: model.py
